[package]
name = "rhyme-es"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = "2.33.3"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
syllabize-es = "0.4.1"
# syllabize-es = { path = "../syllabize-es" }
