[package]
name = "rhyme-es"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = "4.2.7"
regex = "1.8.1"
rocket = "0.4.11"
rocket_contrib = "0.4.11"
rocket_cors = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.162"
syllabize-es = "0.5.2"
# syllabize-es = { path = "../syllabize-es" }
