[package]
name = "rhyme-es"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = "4.4.18"
regex = "1.10.3"
rocket = {version = "0.5.0", features = ["json"]}
rocket_cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.196"
syllabize-es = "0.5.2"
# syllabize-es = { path = "../syllabize-es" }
